Fix white space in navbar button

--- a/less/bootstrap-theme/navbar.less
+++ b/less/bootstrap-theme/navbar.less
@@ -57,6 +57,8 @@
     padding: @btn-padding-vertical 0;
     background-color: transparent;
     vertical-align: top;
+    white-space: normal;
+    word-wrap: normal;
     .border-top-radius(50%);
     .border-bottom-radius(50%);
 
